--- a/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
+++ b/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
@@ -574,7 +574,7 @@ but many of them refer to older versions of those tools, before they got open-so
 Here are some up-to-date resources which I found very helpful:
 
 * https://qconsf.com/system/files/presentation-slides/mikael_vidstedt_-_qconsf-continuous_monitoring_with_jdk_flight_recorder.pdf[Continuous Monitoring with JDK Flight Recorder]: a talk from QCon SF 2019 by Mikael Vidstedt
-* http://hirt.se/blog/?p=1158[Flight Recorder & Mission Control at Code One 2019]: a compilation of several great sessions on these two tools at last year's Code One, put together by Marcus Hirt)
+* http://hirt.se/blog/?p=1158[Flight Recorder & Mission Control at Code One 2019]: a compilation of several great sessions on these two tools at last year's Code One, put together by Marcus Hirt
 * https://dzone.com/articles/analyzing-tcp-socket-with-java-flight-recorder[Digging Into Sockets With Java Flight Recorder]: blog post by Petr Bouda on identifying performance bottlenecks with JFR in a Netty-based web application
 
 Lastly, the Red Hat OpenJDK team is working on some very interesting projects around JFR and JMC, too.
