Updating JFR example to avoid NPE

--- a/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
+++ b/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
@@ -154,7 +154,7 @@ public class FlightRecorderFilter implements ContainerRequestFilter,
     JaxRsInvocationEvent event = (JaxRsInvocationEvent) requestContext
         .getProperty(JaxRsInvocationEvent.NAME);
 
-    if (!event.isEnabled()) {
+    if (event == null || !event.isEnabled()) {
       return;
     }
 
