--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -12,6 +12,7 @@ If you'd like me to have as a speaker at your conference or meet-up, please get 
 
 == Upcoming
 
+* QCon São Paulo: https://qconsp.com/sp2020/presentation/practical-change-data-streaming-use-cases-apache-kafka-and-debezium[Practical Change Data Streaming Use Cases with Apache Kafka and Debezium]
 * JavaLand, Brühl: https://programm.javaland.eu/2020/\#/scheduledEvent/590798[Stream Processing with Quarkus, Kafka Streams and Knative]
 * Java Day Istanbul: https://javaday.istanbul/speaker/gunnar-morling/[Change Data Streaming Use Cases With Apache Kafka & Debezium]
 
