--- a/content/blog/emitter-parameter-pattern-for-flexible-spis.asciidoc
+++ b/content/blog/emitter-parameter-pattern-for-flexible-spis.asciidoc
@@ -105,7 +105,7 @@ public interface BlogPostDataExtractor {
   }
 }
 ----
-<1> SPI method with input parameter an emitter parameter
+<1> SPI method with input parameter and emitter parameter
 <2> Emitter parameter type
 
 An implementation would emit the retrieved information by invoking the methods on the `data` parameter:
