📝 Adjustments to blog post on AppCDS

--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -372,5 +372,6 @@ To learn more about AppCDS,
 a long yet insightful post is https://medium.com/@toparvion/appcds-for-spring-boot-applications-first-contact-6216db6a4194[this one] by Vladimir Plizga.
 Volker Simonis did another https://simonis.github.io/cl4cds/[interesting write-up].
 
-Lastly, the Quarkus team is working on https://github.com/quarkusio/quarkus/pull/9710[out-of-the-box support] for CDS archives,
-which might make it even easier to benefit from the start-up time improvements promised by CDS.
+Lastly, the Quarkus team is working on https://github.com/quarkusio/quarkus/pull/9710[out-of-the-box support] for CDS archives.
+This could automate the creation of an archive for all required classes,
+making it even easier to benefit from the start-up time improvements promised by CDS.
