📝 Adjustments to blog post on AppCDS

--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -342,6 +342,7 @@ This might give you a good balance between additional size and realized improvem
 AppCDS provides Java developers with a useful tool for reducing start-up times of their applications,
 without requiring any code changes.
 For the example discussed, we could observe an improvement of the time-to-first-response metric by about 20%.
+Other users https://groups.google.com/d/msg/quarkus-dev/c10cGsXriI8/TJvn6QRTAwAJ[reported even bigger improvements].
 
 We didn't discuss any potential memory improvements due to CDS when sharing class metadata between multiple JVMs on one host.
 In containerized server applications, with each JVM being packaged in its own container image,
