--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -375,5 +375,5 @@ Volker Simonis did another https://simonis.github.io/cl4cds/[interesting write-u
 Also take a look at the CDS documentation in the reference docs of the https://docs.oracle.com/en/java/javase/14/docs/specs/man/java.html#application-class-data-sharing[_java_] command.
 
 Lastly, the Quarkus team is working on https://github.com/quarkusio/quarkus/pull/9710[out-of-the-box support] for CDS archives.
-This could automate the creation of an archive for all required classes,
+This could fully automate the creation of an archive for all required classes without any further configuration,
 making it even easier to benefit from the start-up time improvements promised by CDS.
