--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -308,7 +308,7 @@ this measures the time until the application is actually ready to handle the fir
 I've done measurements on OpenJDK 1.8.0_252
 (https://adoptopenjdk.net/[AdoptOpenJDK] build),
 OpenJDK 14.0.1 (http://jdk.java.net/14/[upstream build], without and with AppCDS),
-and OpenJDK 15-ea-b26 (http://jdk.java.net/15/[upstream build], withoutwith AppCDS).
+and OpenJDK 15-ea-b26 (http://jdk.java.net/15/[upstream build], with AppCDS).
 Please see the https://github.com/gunnarmorling/quarkus-cds/#run-measurements[README file] of the example repo for the exact steps.
 
 Here are the numbers, averaged over ten runs each:
