Clarification around GraalVM and Project Leyden

--- a/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
+++ b/content/blog/building-class-data-sharing-archives-with-apache-maven.asciidoc
@@ -13,8 +13,8 @@ endif::[]
 
 Ahead-of-time compilation (AOT) is _the_ big topic in the Java ecosystem lately:
 by compiling Java code to native binaries, developers and users benefit from vastly improved start-up times and reduced memory usage.
-Spearheaded by the https://www.graalvm.org/[GraalVM] project,
-https://mail.openjdk.java.net/pipermail/discuss/2020-April/005429.html[Project Leyden] promises to standardize AOT in a future version of the Java platform.
+The https://www.graalvm.org/[GraalVM] project made huge progress towards AOT-compiled Java applications,
+and https://mail.openjdk.java.net/pipermail/discuss/2020-April/005429.html[Project Leyden] promises to standardize AOT in a future version of the Java platform.
 
 This makes it easy to miss out on significant performance improvements which have been made on the JVM in recent Java versions,
 in particular when it comes to https://cl4es.github.io/2019/11/20/OpenJDK-Startup-Update.html[faster start-up times].
